force-app/main/default/objects/Transaction__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>