force-app/main/default/objects/Transaction__c/fields/Blockchain__c.field-meta.xml
<CustomField>
    <fullName>Blockchain__c</fullName>
    <label>Blockchain</label>
    <referenceTo>Blockchain__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>