force-app/main/default/objects/Transaction__c/fields/From_Participant__c.field-meta.xml
<CustomField>
    <fullName>From_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Transactions - Sent</relationshipLabel>
    <relationshipName>Transactions_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>