force-app/main/default/objects/Transaction__c/fields/From_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Participant_Name__c</fullName>
    <formula>From_Participant__r.Name</formula>
    <label>From Participant Name</label>
    <type>Text</type>
</CustomField>