force-app/main/default/objects/Transaction__c/fields/To_Participant__c.field-meta.xml
<CustomField>
    <fullName>To_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Transactions - Received</relationshipLabel>
    <relationshipName>Transactions_Received</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>