force-app/main/default/objects/Transaction__c/fields/To_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Participant_Name__c</fullName>
    <formula>To_Participant__r.Name</formula>
    <label>To Participant Name</label>
    <type>Text</type>
</CustomField>