force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>From_Participant__c</columns>
    <columns>To_Participant__c</columns>
    <columns>Status__c</columns>
    <columns>Blockchain__c</columns>
    <columns>Block__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>